add DB and queries
addmodules such express, pg and cors.Conect client side with server side and made some routes to reach data base.

--- a/src/components/avaliableRent/avaliableRent.module.scss
+++ b/src/components/avaliableRent/avaliableRent.module.scss
@@ -13,6 +13,9 @@
     }   
     ul{
         display: flex;
+        li{
+            margin-left:10px;
+        }
     }
     .button-contanier{
         display: flex;
