Created rent time input
now you can write down your rent time, and depence on rent time price will be change

--- a/src/components/avaliableRent/avaliableRent.module.scss
+++ b/src/components/avaliableRent/avaliableRent.module.scss
@@ -19,5 +19,14 @@
     }
     .button-contanier{
         display: flex;
+        align-items:center;
+        .hide-input{
+            width: 50px;
+            height: 25px;
+        }
+        .hide-input-container{
+            display:flex;
+            align-items: center;
+        }
     }
 }
