--- a/src/main/base-component-styles.scss
+++ b/src/main/base-component-styles.scss
@@ -32,3 +32,11 @@ select{
     height: 46px;
     font-size: 16px;
 }
+
+.hide{
+    display:none !important;
+}
+
+.show{
+    display:block !important;
+}
