--- a/src/main/base-component-styles.scss
+++ b/src/main/base-component-styles.scss
@@ -9,7 +9,7 @@
     cursor: pointer;
     color: white;
     max-height: 46px;
-    margin-left:20px;
+    margin:0 10px 0 10px;
     &:hover {
        opacity: 0.8; 
     }
